# cjsonrs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/cjsonrs/: Cargo.toml  README.md
crates/cjsonrs-sys/: Cargo.toml  README.md  build.rs
crates/cjsonrs-sys/src/: lib.rs
crates/cjsonrs/examples/: custom_allocator.rs  serde.rs
crates/cjsonrs/src/: array.rs  cjson.rs  cjsonref.rs  error.rs  lib.rs  macros.rs  object.rs  serde.rs  string.rs
crates/cjsonrs/src/serde/: de.rs  error.rs  mod.rs  ser.rs
crates/cjsonrs/tests/: cjson.rs  npo.rs  ser.rs
