[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2021"
authors = ["Altair Bueno <abueno@airzonecontrol.com>"]
license = "MIT"
repository = "https://github.com/Corporacion-Empresarial-Altra-R-D/cjsonrs"
homepage = "https://github.com/Corporacion-Empresarial-Altra-R-D/cjsonrs"
keywords = ["cjson", "json", "ffi", "serde"]
rust-version = "1.82.0"

[workspace.dependencies]
# Workspace members
cjsonrs = { path = "crates/cjsonrs", version = "0.1.0" }
cjsonrs-sys = { path = "crates/cjsonrs-sys", version = "0.1.0" }
# Dependencies
thiserror = { version = "2.0", default-features = false }
serde = { version = "1", default-features = false }
cfg-if = "1.0"

# Build dependencies
bindgen = "0.70.0"
cc = "1.0.83"
glob = "0.3.1"
