[package]
name = "cjsonrs"
version = "0.1.0"
description = "High level, `no_std` bindings for cJSON, an ultralightweight JSON parser in ANSI C"
categories = ["api-bindings", "embedded", "no-std", "parser-implementations"]

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["vendored", "send", "sync", "std"]
send = []
sync = ["send"]
vendored = ["cjsonrs-sys/vendored"]
std = ["cjsonrs-sys/std", "thiserror/std"]

[dependencies]
cjsonrs-sys.workspace = true
thiserror.workspace = true

[[example]]
name = "custom_allocator"
required-features = ["default"]
