[package]
name = "cjsonrs"
version = "0.1.0"
description = "High level, `no_std` bindings for cJSON, an ultralightweight JSON parser in ANSI C"
categories = ["api-bindings", "embedded", "no-std", "parser-implementations"]

edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[features]
default = ["vendored", "send", "sync", "std"]
send = []
sync = ["send"]
vendored = ["cjsonrs-sys/vendored"]
serde = ["dep:serde"]
std = ["cjsonrs-sys/std", "thiserror/std", "serde?/std"]

[dependencies]
cjsonrs-sys.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }


[[example]]
name = "custom_allocator"
required-features = ["default"]

[[example]]
name = "serde"
required-features = ["default", "serde", "serde/derive"]
